--- a/documentazione.html
+++ b/documentazione.html
@@ -31,7 +31,7 @@
       L'obiettivo di questo sito è quello di facilitare il percorso di ricerca di tutti coloro che sono interessati alle colonne sonore degli anime. <br> Questo sito vuole anche essere un servizio in continuo aggiornamento e per questo motivo, nella sezione "Suggerimenti", gli utenti sono invitati ad inviarci i nomi di anime che potrebbero non essere già presenti nella lista. <br> I nostri competitor principali sono <a style="color: rgb(255, 0, 0); background-color: white;" href="https://animemusic.org"> Anime Music</a> e <a style="color: rgb(255, 0, 0); background-color: white;" href="https://owldb.net"> OWLDB</a>. Il primo sito è molto valido, ma i titoli degli anime non sono in ordine alfabetico e quindi a colpo d'occhio risulta difficile individuare ciò che si cerca. Il secondo offre un servizio simile, che risulta però meno immediato in quanto non offre un link diretto a Spotify. <br> Il target del sito è molto ampio: sono tutti coloro che si interessano di anime e della loro musica. 
     </p>
     <h2>
-      2. Struttura e Layout (architettura sito, wireframe, look & feel)
+      2. Struttura e Layout (architettura, wireframe, look & feel)
     </h2>
     <p>
       <img id="albero" src="imgs/architettura.PNG"/>
