--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <section style="background-image: url(imgs/anime2.jpg); max-width: 100%; background-repeat: no-repeat; max-height: max-content; height: fit-content; ">
       <nav style="padding: 3%;">
         <ul>
-          <button id="animebutton" style="color:black;background-color: #ffee00;" 
+          <button id="animebutton" style="background-color: #ffee00;"
           type="button" class="btn btn-warning"><li><a class="whitelink" href="listaanime.html"><span style="color: black;"> LISTA ANIME</span></a></li></button>
         </ul>
       </nav>
