--- a/suggerimenti.html
+++ b/suggerimenti.html
@@ -19,7 +19,7 @@
     <h1>SUGGERIMENTI</h1>
     <main>
       <h2>
-   Scriveteci qua sotto i vostri suggerimenti ed aiutateci a essere sempre aggiornati!
+   scrivete qua sotto i vostri suggerimenti e aiutateci a essere sempre aggiornati!
       </h2>
 
       <div id="input" class="input-group">
