--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
   <head>
      <link rel="stylesheet" href="style_index.css">
     <title>Anime Music Gallery</title>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-79GRMH7HWW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-79GRMH7HWW');
+</script>
   </head>
   <body>
     <header>      
