--- a/documentazione.html
+++ b/documentazione.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html lang="it">
   <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-79GRMH7HWW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-79GRMH7HWW');
+</script>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style_documentazione.css">
   </head>
