--- a/documentazione.html
+++ b/documentazione.html
@@ -31,7 +31,7 @@
       0. Abstract
     </h2>
     <p id="testo">
-      Anime Music Gallery è un portle che aiuta a trovare le canzoni presenti in un anime: con una semplice ricerca, o consultando l'elenco in ordine alfabetico, chiunque sarà in grado di accedere alle sigle in modo immediato.
+      Anime Music Gallery è un portale che aiuta a trovare le canzoni presenti in un anime: con una semplice ricerca, o consultando l'elenco in ordine alfabetico, chiunque sarà in grado di accedere alle sigle in modo immediato.
     </p>
     <h2>
       1. Benchmarking (obiettivi, target, competitors)
